--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "rustpython_compiler"
 version = "0.1.0"
-authors = ["coolreader18 <33094578+coolreader18@users.noreply.github.com>"]
+authors = ["coolreader18 <33094578+coolreader18@users.noreply.github.com>", "Windel Bouwman <windel@windel.nl>"]
 edition = "2018"
 
 [dependencies]
 bitflags = "1.1"
+rustpython_bytecode = { path = "../bytecode" }
 rustpython_parser = { path = "../parser" }
 serde = { version = "1.0", features = ["derive"] }
 num-complex = { version = "0.2", features = ["serde"] }
