--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rustpython-compiler"
 version = "0.1.0"
-authors = ["coolreader18 <33094578+coolreader18@users.noreply.github.com>", "Windel Bouwman <windel@windel.nl>"]
+authors = ["RustPython Team"]
 edition = "2018"
 
 [dependencies]
