--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ rustpython-parser = { path = "../parser", version = "0.1.1" }
 num-complex = { version = "0.3", features = ["serde"] }
 log = "0.4"
 arrayvec = "0.5"
+
+[dev-dependencies]
+insta = { version = "1.1", features = ["ron"] }
