--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "rust-python-linter"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "rust_python_linter"
+crate-type = ["cdylib", "lib"]
+
 [dependencies]
 anyhow = { version = "1.0.60" }
 bincode = { version = "1.3.3" }
@@ -19,3 +23,4 @@ rustpython-parser = { git = "https://github.com/RustPython/RustPython.git", rev 
 serde = { version = "1.0.143", features = ["derive"] }
 serde_json = { version = "1.0.83" }
 walkdir = { version = "2.3.2" }
+pyo3 = { version = "0.16.5", features = ["extension-module", "abi3-py37"] }
