--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,3 +36,17 @@ jobs:
         with:
           toolchain: stable
       - run: cargo clippy -- -D warnings
+
+  maturin_build:
+    name: "maturin build"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - run: pip install maturin
+      - run: maturin build -b bin
