--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust-python-linter"
-version = "0.0.6"
+version = "0.0.7"
 edition = "2021"
 
 [lib]
@@ -13,7 +13,7 @@ bincode = { version = "1.3.3" }
 cacache = { version = "10.0.1" }
 chrono = { version = "0.4.21" }
 clap = { version = "3.2.16", features = ["derive"] }
-clearscreen = "1.0.10"
+clearscreen = { version = "1.0.10" }
 colored = { version = "2.0.0" }
 fern = { version = "0.6.1" }
 log = { version = "0.4.17" }
