--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,10 @@ colored = { version = "2.0.0" }
 fern = { version = "0.6.1" }
 log = { version = "0.4.17" }
 notify = { version = "4.0.17" }
+pyo3 = { version = "0.16.5", features = ["extension-module", "abi3-py37"] }
 rayon = { version = "1.5.3" }
+regex = { version = "1.6.0" }
 rustpython-parser = { git = "https://github.com/RustPython/RustPython.git", rev = "dff916d45c5d13074d21ad329a5ab68a6499426a" }
 serde = { version = "1.0.143", features = ["derive"] }
 serde_json = { version = "1.0.83" }
 walkdir = { version = "2.3.2" }
-pyo3 = { version = "0.16.5", features = ["extension-module", "abi3-py37"] }
