--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap = { version = "3.2.16", features = ["derive"] }
 clearscreen = { version = "1.0.10" }
 colored = { version = "2.0.0" }
 fern = { version = "0.6.1" }
+lazy_static = { version = "1.4.0" }
 log = { version = "0.4.17" }
 notify = { version = "4.0.17" }
 pyo3 = { version = "0.16.5", features = ["extension-module", "abi3-py37"] }
@@ -25,3 +26,7 @@ rustpython-parser = { git = "https://github.com/RustPython/RustPython.git", rev 
 serde = { version = "1.0.143", features = ["derive"] }
 serde_json = { version = "1.0.83" }
 walkdir = { version = "2.3.2" }
+
+[profile.release]
+lto = true
+panic = "abort"
