--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -6,11 +6,14 @@ authors = ["Charles Marsh <charlie.r.marsh@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-pylint = "^2.15.0"
-pycodestyle = "^2.9.1"
-flake8 = "^5.0.4"
 autoflake = "^1.4"
+flake8 = "^5.0.4"
+matplotlib = "^3.5.3"
+numpy = "^1.23.2"
+pycodestyle = "^2.9.1"
 pyflakes = "^2.5.0"
+pylint = "^2.15.0"
+scipy = "^1.9.1"
 
 [tool.poetry.dev-dependencies]
 
