--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ author = "Charlie Marsh"
 author_email = "charlie.r.marsh@gmail.com"
 url = "https://github.com/charliermarsh/ruff"
 description = "An extremely fast Python linter, written in Rust."
+requires-python = ">=3.7"
 
 [build-system]
 requires = ["maturin>=0.13,<0.14"]
@@ -28,3 +29,5 @@ build-backend = "maturin"
 
 [tool.maturin]
 bindings = "bin"
+sdist-include = ["Cargo.lock"]
+strip = true
