--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [lib]
 name = "ruff"
-crate-type = ["cdylib", "lib"]
 
 [dependencies]
 anyhow = { version = "1.0.60" }
@@ -18,6 +17,7 @@ colored = { version = "2.0.0" }
 common-path = { version = "1.0.0" }
 dirs = { version = "4.0.0" }
 fern = { version = "0.6.1" }
+filetime = "0.2.17"
 log = { version = "0.4.17" }
 notify = { version = "4.0.17" }
 pyo3 = { version = "0.16.5", features = ["extension-module", "abi3-py37"] }
