--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,10 +23,6 @@ jobs:
           target: aarch64-apple-darwin
           profile: minimal
           default: true
-      - name: Build
-        run: cargo build --release
-      - name: Tests
-        run: cargo test --no-default-features --release
       - name: Build wheels - x86_64
         uses: messense/maturin-action@v1
         with:
@@ -70,12 +66,6 @@ jobs:
           toolchain: stable
           profile: minimal
           default: true
-      - name: Build
-        if: matrix.target == 'x64'
-        run: cargo build --release
-      - name: Tests
-        if: matrix.target == 'x64'
-        run: cargo test --no-default-features --release
       - name: Build wheels
         uses: messense/maturin-action@v1
         with:
@@ -104,10 +94,6 @@ jobs:
         toolchain: stable
         profile: minimal
         default: true
-    - name: Build
-      run: cargo build --release
-    - name: Tests
-      run: cargo test --no-default-features --release
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
@@ -147,7 +133,6 @@ jobs:
         arch: ${{ matrix.target }}
         distro: ubuntu20.04
         githubToken: ${{ github.token }}
-        # Mount the dist directory as /artifacts in the container
         dockerRunArgs: |
           --volume "${PWD}/dist:/artifacts"
         install: |
@@ -180,7 +165,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: '3.10'
-      - name: Publish to PyPi
+      - name: Publish to PyPI
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
