--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -50,7 +50,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.10
+          python-version: "3.10"
           architecture: ${{ matrix.target }}
       - name: Update rustup
         run: rustup self update
@@ -89,7 +89,7 @@ jobs:
         default: true
     - uses: actions/setup-python@v2
       with:
-        python-version: 3.10
+        python-version: "3.10"
     - name: Build Wheels
       uses: messense/maturin-action@v1
       with:
@@ -156,7 +156,7 @@ jobs:
           name: wheels
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
+          python-version: "3.10"
       - name: Publish to PyPI
         env:
           TWINE_USERNAME: __token__
