Build on every push but only publish on tags

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,6 +1,7 @@
 name: Release
 
 on:
+  push:
   create:
     tags:
       - v*
@@ -267,7 +268,7 @@ jobs:
       - musllinux
       - musllinux-cross
       - pypy
-    if: "startsWith(github.ref, 'refs/tags/')"
+    if: "github.ref == 'refs/heads/main' && startsWith(github.ref, 'refs/tags/')"
     steps:
       - uses: actions/download-artifact@v2
         with:
