Prettify md/yaml files
Resolved via `prettier -w .`

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   cargo_build:
@@ -105,7 +105,7 @@ jobs:
           toolchain: stable
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
       - run: pip install maturin
       - uses: actions/cache@v3
         env:
