--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ common-path = { version = "1.0.0" }
 dirs = { version = "4.0.0" }
 fern = { version = "0.6.1" }
 filetime = { version = "0.2.17" }
-glob = { version = "0.3.0"}
+glob = { version = "0.3.0" }
 log = { version = "0.4.17" }
 notify = { version = "4.0.17" }
 once_cell = { version = "1.13.1" }
@@ -28,6 +28,7 @@ rustpython-parser = { features = ["lalrpop"], git = "https://github.com/charlier
 serde = { version = "1.0.143", features = ["derive"] }
 serde_json = { version = "1.0.83" }
 toml = { version = "0.5.9" }
+update-informer = { version = "0.5.0", default_features = false, features = ["pypi"] }
 walkdir = { version = "2.3.2" }
 
 [profile.release]
