--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,8 @@
 repos:
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.40
+    rev: v0.0.86
     hooks:
-      - id: lint
+      - id: ruff
 
   - repo: https://github.com/abravalheri/validate-pyproject
     rev: v0.10.1
